2007-03-19  David Smith  <dsmith@redhat.com>

	PR 4146 (partial fix)
	* tapsets.cxx (all_session_groups): Added note about stating that
	begin probes should be registered (actually run) first and end
	probes should be unregistered (run) last.
	* translate.cxx (c_unparser::emit_module_exit): Process probe
	group vector in reverse order so that probe groups will get
	unregistered in the reverse order that they were registered.

2007-03-19  Frank Ch. Eigler  <fche@elastic.org>

	* buildrun.cxx (compile_pass): Emit kbuild-time autoconf widgets
	to customize runtime or translator C code to actual kernel rather
	than kernel version string.  Thanks to FC 2.6."20" for the nudge.
	* tapsets.cxx (hrtimer*emit_module): First client: HRTIMER_{MODE_}REL.

2007-03-17  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Tweak missing elfutils error message.
	* configure: Regenerated.

2007-03-16  David Smith  <dsmith@redhat.com>

	PR 3545.
	* tapsets.cxx (common_probe_entryfn_prologue): Added
	'overload_processing' parameter, which defaults to true.  If
	overload_processing is set to false, doesn't output the
	STP_OVERLOAD code.
	(common_probe_entryfn_epilogue): Ditto.
	(be_derived_probe_group::emit_module_decl): Set
	overload_processing to false in calls to
	common_probe_entryfn_prologue and common_probe_entryfn_epilogue
	since begin/end probes shouldn't overload the system.
	* translate.cxx (c_unparser::emit_common_header): Emit
	STP_OVERLOAD global variables.
	(translate_pass): Emit STP_OVERLOAD defines.

2007-03-14  Martin Hunt  <hunt@redhat.com>	
	* main.cxx (usage): Remove "-M" and edit description
	of "-b".
	* stap.1.in: Remove "-M" option and edit description of "-b".
	Edit description of "-o".
	
2007-03-14  Martin Hunt  <hunt@redhat.com>
	* Makefile.am: Don't install old relayfs sources.
	* makefile.in: Rebuilt.

2007-03-14  Martin Hunt  <hunt@redhat.com>
	
	* Makefile.am (staprun_SOURCES): Sources now live in
	runtime/staprun.
	* makefile.in: Rebuilt.
