@@ -973,9 +973,7 @@ systemtap_session::systemtap_session ():
   mark_derived_probes(0), 
   hrtimer_derived_probes(0), 
   perfmon_derived_probes(0), 
-  op (0), up (0),
-  kprobes_text_initialized (false),
-  kprobes_text_start (0), kprobes_text_end (0)
+  op (0), up (0)
 {
 }
 
