@@ -1,3 +1,8 @@
+2007-03-20  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 4224.
+	* sym.c (_stp_module_relocate): Support kernel relocations.
+
 2007-03-19  Frank Ch. Eigler  <fche@elastic.org>
 
 	* autoconf-hrtimer-rel.c: New file.
